lib/tests/fixtures/compiler/evaluation/case_in_type_spec.baseline
Error: case_in_type_spec.pp:1:24: node 'test': case expressions cannot be used in type specifications.
  type Invalid = Integer[case foo { default: {} }]
                         ^~~~~~~~~~~~~~~~~~~~~~~~
