lib/tests/fixtures/compiler/evaluation/case_in_type_spec.pp
type Invalid = Integer[case foo { default: {} }]
